apps/eink-dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eink-dashboard
  namespace: eink-dashboard
  labels:
    app: eink-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eink-dashboard
  template:
    metadata:
      labels:
        app: eink-dashboard
    spec:
      containers:
        - name: eink-dashboard
          image: ghcr.io/andresfelipemendez/eink-dashboard:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "16Mi"
              cpu: "10m"
            limits:
              memory: "32Mi"
              cpu: "50m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
